Added the list of available candidates

--- a/Rutgers_Data_Science/PyPoll/PyPoll.ipynb
+++ b/Rutgers_Data_Science/PyPoll/PyPoll.ipynb
@@ -20,14 +20,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Ballot ID', 'County', 'Candidate']\n"
+      "['Ballot ID', 'County', 'Candidate']\n",
+      "369711 ['Charles Casper Stockham', 'Diana DeGette', 'Raymon Anthony Doane']\n"
      ]
     }
    ],
@@ -40,6 +41,8 @@
     "# Assign a variable to save the file to a path.\n",
     "file_to_save = os.path.join(\"analysis\", \"election_analysis.txt\")\n",
     "\n",
+    "candidate_options = []\n",
+    "\n",
     "# Open the election results and read the file.\n",
     "with open(file_to_load) as election_data:\n",
     "    file_reader = csv.reader(election_data)\n",
@@ -47,7 +50,15 @@
     "    # Read and print the header row.\n",
     "    headers = next(file_reader)\n",
     "    print(headers)\n",
-    "    "
+    "\n",
+    "    accumulator = 0\n",
+    "    for row in file_reader:\n",
+    "        if row[2] not in candidate_options:\n",
+    "            candidate_options.append(row[2])\n",
+    "        accumulator += 1\n",
+    "    \n",
+    "\n",
+    "    \n"
    ]
   }
  ],
