Added output for winners and percentages

--- a/Rutgers_Data_Science/PyPoll/PyPoll.ipynb
+++ b/Rutgers_Data_Science/PyPoll/PyPoll.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -28,7 +28,14 @@
      "output_type": "stream",
      "text": [
       "['Ballot ID', 'County', 'Candidate']\n",
-      "369711 ['Charles Casper Stockham', 'Diana DeGette', 'Raymon Anthony Doane']\n"
+      "Charles Casper Stockham: recieved 23.048272840137297% of the total vote\n",
+      "Diana DeGette: recieved 73.81197746347823% of the total vote\n",
+      "Raymon Anthony Doane: recieved 3.1389382517696256% of the total vote\n",
+      "-----------------------------------------\n",
+      "Winner: Diana DeGette\n",
+      "Winning Vote Count: 272891\n",
+      "Winning Percentage: 73.81197746347823% of the vote!\n",
+      "-----------------------------------------\n"
      ]
     }
    ],
@@ -41,7 +48,12 @@
     "# Assign a variable to save the file to a path.\n",
     "file_to_save = os.path.join(\"analysis\", \"election_analysis.txt\")\n",
     "\n",
-    "candidate_options = []\n",
+    "candidate_votes = {}\n",
+    "total_votes = 0\n",
+    "\n",
+    "winning_candidate = ''\n",
+    "greatest_vote = 0\n",
+    "winning_percentage = 0\n",
     "\n",
     "# Open the election results and read the file.\n",
     "with open(file_to_load) as election_data:\n",
@@ -51,13 +63,28 @@
     "    headers = next(file_reader)\n",
     "    print(headers)\n",
     "\n",
-    "    accumulator = 0\n",
     "    for row in file_reader:\n",
-    "        if row[2] not in candidate_options:\n",
-    "            candidate_options.append(row[2])\n",
-    "        accumulator += 1\n",
+    "        candidate_name = row[2]\n",
+    "        if candidate_name not in candidate_votes:\n",
+    "            candidate_votes[candidate_name] = 0\n",
+    "        else:\n",
+    "            candidate_votes[candidate_name] += 1\n",
+    "        if candidate_name not in candidate_options:\n",
+    "            candidate_options.append(candidate_name)\n",
+    "        total_votes += 1\n",
+    "    #for candidate in candidate_options:\n",
+    "    #    candidate_votes[candidate]=0\n",
+    "    for candidate in candidate_votes:\n",
+    "        votes = candidate_votes[candidate]\n",
+    "        votePercentage = votes / total_votes * 100\n",
+    "        print(f\"{candidate}: recieved {votePercentage}% of the total vote\")\n",
+    "        if votePercentage > winning_percentage:\n",
+    "            winning_percentage = votePercentage\n",
+    "            winning_candidate = candidate\n",
     "    \n",
-    "\n",
+    "    print(\"-----------------------------------------\")\n",
+    "    print(f\"Winner: {winning_candidate}\\nWinning Vote Count: {candidate_votes[winning_candidate]}\\nWinning Percentage: {winning_percentage}% of the vote!\")\n",
+    "    print(\"-----------------------------------------\")\n",
     "    \n"
    ]
   }
