Finalized summary document and editted formatting to be more readable

--- a/Rutgers_Data_Science/PyPoll/PyPoll.ipynb
+++ b/Rutgers_Data_Science/PyPoll/PyPoll.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -28,14 +28,22 @@
      "output_type": "stream",
      "text": [
       "['Ballot ID', 'County', 'Candidate']\n",
-      "Charles Casper Stockham: recieved 23.048272840137297% of the total vote\n",
-      "Diana DeGette: recieved 73.81197746347823% of the total vote\n",
-      "Raymon Anthony Doane: recieved 3.1389382517696256% of the total vote\n",
+      "\n",
+      "Election Results\n",
       "-----------------------------------------\n",
-      "Winner: Diana DeGette\n",
-      "Winning Vote Count: 272891\n",
-      "Winning Percentage: 73.81197746347823% of the vote!\n",
-      "-----------------------------------------\n"
+      "Total Votes: 369,711\n",
+      "-----------------------------------------\n",
+      "Charles Casper Stockham: 23.0% (85,212)\n",
+      "\n",
+      "Diana DeGette: 73.8% (272,891)\n",
+      "\n",
+      "Raymon Anthony Doane: 3.1% (11,605)\n",
+      "\n",
+      "Winner: Charles Casper Stockham\n",
+      "Winning Count: 85,212\n",
+      "Winning Vote Percentage: 23.0%\n",
+      "-----------------------------------------\n",
+      "\n"
      ]
     }
    ],
@@ -46,7 +54,7 @@
     "# Assign a variable to load a file from a path.\n",
     "file_to_load = os.path.join(\"Resources\", \"election_results.csv\")\n",
     "# Assign a variable to save the file to a path.\n",
-    "file_to_save = os.path.join(\"analysis\", \"election_analysis.txt\")\n",
+    "file_to_save = os.path.join(\"Analysis\", \"election_analysis.txt\")\n",
     "\n",
     "candidate_votes = {}\n",
     "total_votes = 0\n",
@@ -74,18 +82,42 @@
     "        total_votes += 1\n",
     "    #for candidate in candidate_options:\n",
     "    #    candidate_votes[candidate]=0\n",
-    "    for candidate in candidate_votes:\n",
-    "        votes = candidate_votes[candidate]\n",
-    "        votePercentage = votes / total_votes * 100\n",
-    "        print(f\"{candidate}: recieved {votePercentage}% of the total vote\")\n",
-    "        if votePercentage > winning_percentage:\n",
-    "            winning_percentage = votePercentage\n",
-    "            winning_candidate = candidate\n",
-    "    \n",
-    "    print(\"-----------------------------------------\")\n",
-    "    print(f\"Winner: {winning_candidate}\\nWinning Vote Count: {candidate_votes[winning_candidate]}\\nWinning Percentage: {winning_percentage}% of the vote!\")\n",
-    "    print(\"-----------------------------------------\")\n",
-    "    \n"
+    "\n",
+    "    with open(file_to_save, \"w\") as txt_file:\n",
+    "        election_results = (\n",
+    "            f\"\\nElection Results\\n\"\n",
+    "            f\"-----------------------------------------\\n\"\n",
+    "            f\"Total Votes: {total_votes:,}\\n\"\n",
+    "            f\"-----------------------------------------\\n\"\n",
+    "\n",
+    "        )\n",
+    "        print(election_results, end='')\n",
+    "        txt_file.write(election_results)\n",
+    "        for candidate in candidate_votes:\n",
+    "            votes = candidate_votes[candidate]\n",
+    "            vote_percentage = float(votes) / float(total_votes) * 100\n",
+    "            candidate_results = (f\"{candidate}: {vote_percentage:.1f}% ({votes:,})\\n\")\n",
+    "            print(candidate_results)\n",
+    "            txt_file.write(candidate_results)\n",
+    "            if votePercentage > winning_percentage:\n",
+    "                winning_percentage = votePercentage\n",
+    "                winning_candidate = candidate\n",
+    "        \n",
+    "        #redundent print statement \n",
+    "        #print(\"-----------------------------------------\")\n",
+    "        #print(f\"Winner: {winning_candidate}\\nWinning Vote Count: {candidate_votes[winning_candidate]}\\nWinning Percentage: {winning_percentage}% of the vote!\")\n",
+    "        #print(\"-----------------------------------------\")\n",
+    "\n",
+    "        winner_summary = (\n",
+    "            f\"-----------------------------------------\\n\"\n",
+    "            f\"Winner: {winning_candidate}\\n\"\n",
+    "            f\"Winning Count: {candidate_votes[winning_candidate]:,}\\n\"\n",
+    "            f\"Winning Vote Percentage: {winning_percentage:.1f}%\\n\"\n",
+    "            f\"-----------------------------------------\\n\"\n",
+    "        )\n",
+    "        print(write_to_file_summary)\n",
+    "        txt_file.write(winner_summary)\n",
+    "        \n"
    ]
   }
  ],
