added cleaner to code to remove prefixes and suffixes

--- a/Rutgers_Data_Science/PyCitySchools/PyCitySchools.ipynb
+++ b/Rutgers_Data_Science/PyCitySchools/PyCitySchools.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "id": "insured-zambia",
    "metadata": {},
    "outputs": [],
@@ -21,6 +21,8 @@
     "\n",
     "school_series = pd.Series(high_schools)\n",
     "school_dataFrame= pd.DataFrame(high_school_dicts)\n",
+    "missingGradesDF = pd.read_csv(\"Resources/missing_grades.csv\")\n",
+    "missingGradesDF.fillna(85,inplace=True)\n",
     "school_id = school_dataFrame['School ID'].tolist()\n",
     "school_name = school_dataFrame['school_name'].tolist()\n",
     "school_type = school_dataFrame['type'].tolist()\n",
@@ -31,14 +33,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 3,
    "id": "5fd43d1e",
    "metadata": {},
    "outputs": [],
    "source": [
     "schoolCompleteDF = pd.read_csv(\"Resources/schools_complete.csv\")\n",
     "studentCompleteDF = pd.read_csv(\"Resources/students_complete.csv\")\n",
-    "missingGradesDF = pd.read_csv(\"Resources/missing_grades.csv\")\n",
     "#studentCompleteDF['student_name'][3] = 'Richard Scott'\n",
     "#better way to replace Dr. Richard Scott \n",
     "#studentCompleteDF.replace({'student_name': 'Dr. Richard Scott'}, 'Richard Scott', inplace=True)\n",
@@ -48,40 +49,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 6,
    "id": "49b71387",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Student ID       0\n",
-       "student_name     0\n",
-       "gender           0\n",
-       "grade            0\n",
-       "reading_score    1\n",
-       "math_score       1\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 72,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Lisa', 'Lori', 'Ian', 'Lynn', 'Cody', 'Sean', 'Greg', 'Tony', 'Noah', 'Dana', 'Jon', 'Marc', 'Dr.', 'Tina', 'Miss', 'Jill', 'Anne', 'Tara', 'Mr.', 'Judy', 'Leah', 'Troy', 'Gina', 'Mrs.', 'Kari', 'Luke', 'Adam', 'Emma', 'Todd', 'Cory', 'Erin', 'Mark', 'Sara', 'Seth', 'Gary', 'Omar', 'Paul', 'Ruth', 'Jose', 'Jodi', 'John', 'Kara', 'Joe', 'Ms.', 'Amy', 'Dawn', 'Erik', 'Gail', 'Toni', 'Mike', 'Carl', 'Eric', 'Kyle', 'Dale', 'Kim', 'Mary', 'Anna', 'Chad', 'Ryan'} \n",
+      " {'Li', 'Roy', 'II', 'MD', 'Lee', 'Day', 'PhD', 'V', 'Kim', 'III', 'DDS', 'DVM', 'IV', 'Jr.', 'Cox'}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_2571/3614563649.py:22: FutureWarning: The default value of regex will change from True to False in a future version.\n",
+      "  studentCompleteDF[\"student_name\"] = studentCompleteDF[\"student_name\"].str.replace(word,\"\")\n"
+     ]
     }
    ],
    "source": [
-    "missingGradesDF.isnull().sum()"
+    "student_names=studentCompleteDF[\"student_name\"].tolist()\n",
+    "names_to_fix = []\n",
+    "for name in student_names:\n",
+    "    if len(name.split()) >= 3:\n",
+    "        names_to_fix.append(name)\n",
+    "prefixes=[]\n",
+    "suffixes=[]\n",
+    "for name in names_to_fix:\n",
+    "    if len(name.split()[0]) <= 4:\n",
+    "        prefixes.append(name.split()[0])\n",
+    "for name in names_to_fix:\n",
+    "    if len(name.split()[-1]) <= 3:\n",
+    "        suffixes.append(name.split()[-1])\n",
+    "print(set(prefixes),'\\n',set(suffixes))\n",
+    "prefixes_to_remove = ['Ms.', 'Mrs.', 'Miss','Mr.', 'Dr.']\n",
+    "suffixes_to_remove = ['MD','DDS', 'DVM','Ph.D']\n",
+    "\n",
+    "pre_suf_to_remove = prefixes_to_remove + suffixes_to_remove\n",
+    "\n",
+    "#removing prefixes and replacing them with nothing\n",
+    "for word in pre_suf_to_remove:\n",
+    "    studentCompleteDF[\"student_name\"] = studentCompleteDF[\"student_name\"].str.replace(word,\"\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "77bdcec6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0           Paul Bradley\n",
+      "1           Victor Smith\n",
+      "2        Kevin Rodriguez\n",
+      "3          Richard Scott\n",
+      "4             Bonnie Ray\n",
+      "              ...       \n",
+      "39165       Donna Howard\n",
+      "39166          Dawn Bell\n",
+      "39167     Rebecca Tanner\n",
+      "39168       Desiree Kidd\n",
+      "39169    Carolyn Jackson\n",
+      "Name: student_name, Length: 39170, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(studentCompleteDF[\"student_name\"])"
    ]
   }
  ],
  "metadata": {
   "interpreter": {
-   "hash": "1e78d4cf6ee61976aa959d568eeedaf164f285dc47b28490207c82054a8e44cc"
+   "hash": "5cb451d39beecfc9cc0fc417a38f93c707248a4cefc69ab2e1c68ce1f2eb2cfa"
   },
   "kernelspec": {
-   "display_name": "PythonData",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "pythondata"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
