--- a/Rutgers_Data_Science/PyCitySchools/cleaning_student_names.ipynb
+++ b/Rutgers_Data_Science/PyCitySchools/cleaning_student_names.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "insured-zambia",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "id": "49b71387",
    "metadata": {},
    "outputs": [
@@ -57,8 +57,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'John', 'Troy', 'Dawn', 'Ms.', 'Lori', 'Gary', 'Ryan', 'Lisa', 'Mrs.', 'Jodi', 'Tony', 'Mike', 'Jon', 'Jill', 'Noah', 'Gail', 'Anna', 'Leah', 'Ian', 'Miss', 'Mr.', 'Dr.', 'Kari', 'Tara', 'Chad', 'Ruth', 'Amy', 'Luke', 'Cody', 'Omar', 'Eric', 'Kim', 'Todd', 'Erin', 'Erik', 'Kara', 'Sara', 'Adam', 'Lynn', 'Paul', 'Kyle', 'Judy', 'Dale', 'Carl', 'Cory', 'Greg', 'Seth', 'Sean', 'Toni', 'Anne', 'Emma', 'Dana', 'Gina', 'Marc', 'Mary', 'Joe', 'Mark', 'Tina', 'Jose'} \n",
-      " {'V', 'DDS', 'Kim', 'Day', 'Jr.', 'Roy', 'Li', 'Lee', 'II', 'DVM', 'Cox', 'PhD', 'MD', 'III', 'IV'}\n"
+      "{'Lisa', 'Lori', 'Ian', 'Lynn', 'Cody', 'Sean', 'Greg', 'Tony', 'Noah', 'Dana', 'Jon', 'Marc', 'Dr.', 'Tina', 'Miss', 'Jill', 'Anne', 'Tara', 'Mr.', 'Judy', 'Leah', 'Troy', 'Gina', 'Mrs.', 'Kari', 'Luke', 'Adam', 'Emma', 'Todd', 'Cory', 'Erin', 'Mark', 'Sara', 'Seth', 'Gary', 'Omar', 'Paul', 'Ruth', 'Jose', 'Jodi', 'John', 'Kara', 'Joe', 'Ms.', 'Amy', 'Dawn', 'Erik', 'Gail', 'Toni', 'Mike', 'Carl', 'Eric', 'Kyle', 'Dale', 'Kim', 'Mary', 'Anna', 'Chad', 'Ryan'} \n",
+      " {'Li', 'Roy', 'II', 'MD', 'Lee', 'Day', 'PhD', 'V', 'Kim', 'III', 'DDS', 'DVM', 'IV', 'Jr.', 'Cox'}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_2571/3614563649.py:22: FutureWarning: The default value of regex will change from True to False in a future version.\n",
+      "  studentCompleteDF[\"student_name\"] = studentCompleteDF[\"student_name\"].str.replace(word,\"\")\n"
      ]
     }
    ],
@@ -78,7 +86,42 @@
     "        suffixes.append(name.split()[-1])\n",
     "print(set(prefixes),'\\n',set(suffixes))\n",
     "prefixes_to_remove = ['Ms.', 'Mrs.', 'Miss','Mr.', 'Dr.']\n",
-    "suffixes_to_remove = ['MD','DDS', 'DVM','Ph.D']\n"
+    "suffixes_to_remove = ['MD','DDS', 'DVM','Ph.D']\n",
+    "\n",
+    "pre_suf_to_remove = prefixes_to_remove + suffixes_to_remove\n",
+    "\n",
+    "#removing prefixes and replacing them with nothing\n",
+    "for word in pre_suf_to_remove:\n",
+    "    studentCompleteDF[\"student_name\"] = studentCompleteDF[\"student_name\"].str.replace(word,\"\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "77bdcec6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0           Paul Bradley\n",
+      "1           Victor Smith\n",
+      "2        Kevin Rodriguez\n",
+      "3          Richard Scott\n",
+      "4             Bonnie Ray\n",
+      "              ...       \n",
+      "39165       Donna Howard\n",
+      "39166          Dawn Bell\n",
+      "39167     Rebecca Tanner\n",
+      "39168       Desiree Kidd\n",
+      "39169    Carolyn Jackson\n",
+      "Name: student_name, Length: 39170, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(studentCompleteDF[\"student_name\"])"
    ]
   }
  ],
