district summary complete.

--- a/Rutgers_Data_Science/PyCitySchools/PyCitySchools.ipynb
+++ b/Rutgers_Data_Science/PyCitySchools/PyCitySchools.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 94,
    "id": "insured-zambia",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
     "                    {\"School ID\": 4, \"school_name\":\"Griffin High School\", \"type\": \"Charter\"}]\n",
     "\n",
     "school_series = pd.Series(high_schools)\n",
-    "school_dataFrame= pd.DataFrame(high_school_dicts)\n",
+    "school_data= pd.DataFrame(high_school_dicts)\n",
     "missingGradesDF = pd.read_csv(\"Resources/missing_grades.csv\")\n",
     "missingGradesDF.fillna(85,inplace=True)\n",
     "school_id = school_dataFrame['School ID'].tolist()\n",
@@ -33,13 +33,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 95,
    "id": "5fd43d1e",
    "metadata": {},
    "outputs": [],
    "source": [
     "schoolCompleteDF = pd.read_csv(\"Resources/schools_complete.csv\")\n",
-    "studentCompleteDF = pd.read_csv(\"Resources/students_complete.csv\")\n",
+    "studentCompleteDF = pd.read_csv(\"Resources/clean_students_complete.csv\")\n",
     "#studentCompleteDF['student_name'][3] = 'Richard Scott'\n",
     "#better way to replace Dr. Richard Scott \n",
     "#studentCompleteDF.replace({'student_name': 'Dr. Richard Scott'}, 'Richard Scott', inplace=True)\n",
@@ -49,29 +49,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 96,
    "id": "49b71387",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'Lisa', 'Lori', 'Ian', 'Lynn', 'Cody', 'Sean', 'Greg', 'Tony', 'Noah', 'Dana', 'Jon', 'Marc', 'Dr.', 'Tina', 'Miss', 'Jill', 'Anne', 'Tara', 'Mr.', 'Judy', 'Leah', 'Troy', 'Gina', 'Mrs.', 'Kari', 'Luke', 'Adam', 'Emma', 'Todd', 'Cory', 'Erin', 'Mark', 'Sara', 'Seth', 'Gary', 'Omar', 'Paul', 'Ruth', 'Jose', 'Jodi', 'John', 'Kara', 'Joe', 'Ms.', 'Amy', 'Dawn', 'Erik', 'Gail', 'Toni', 'Mike', 'Carl', 'Eric', 'Kyle', 'Dale', 'Kim', 'Mary', 'Anna', 'Chad', 'Ryan'} \n",
-      " {'Li', 'Roy', 'II', 'MD', 'Lee', 'Day', 'PhD', 'V', 'Kim', 'III', 'DDS', 'DVM', 'IV', 'Jr.', 'Cox'}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_2571/3614563649.py:22: FutureWarning: The default value of regex will change from True to False in a future version.\n",
-      "  studentCompleteDF[\"student_name\"] = studentCompleteDF[\"student_name\"].str.replace(word,\"\")\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'student_names=studentCompleteDF[\"student_name\"].tolist()\\nnames_to_fix = []\\nfor name in student_names:\\n    if len(name.split()) >= 3:\\n        names_to_fix.append(name)\\nprefixes=[]\\nsuffixes=[]\\nfor name in names_to_fix:\\n    if len(name.split()[0]) <= 4:\\n        prefixes.append(name.split()[0])\\nfor name in names_to_fix:\\n    if len(name.split()[-1]) <= 3:\\n        suffixes.append(name.split()[-1])\\nprefixes_to_remove = [\\'Ms.\\', \\'Mrs.\\', \\'Miss\\',\\'Mr.\\', \\'Dr.\\']\\nsuffixes_to_remove = [\\'MD\\',\\'DDS\\', \\'DVM\\',\\'Ph.D\\']\\n\\npre_suf_to_remove = prefixes_to_remove + suffixes_to_remove\\n\\n#removing prefixes and replacing them with nothing\\nfor word in pre_suf_to_remove:\\n    studentCompleteDF[\"student_name\"] = studentCompleteDF[\"student_name\"].str.replace(word,\"\")\\n    '"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "student_names=studentCompleteDF[\"student_name\"].tolist()\n",
+    "'''student_names=studentCompleteDF[\"student_name\"].tolist()\n",
     "names_to_fix = []\n",
     "for name in student_names:\n",
     "    if len(name.split()) >= 3:\n",
@@ -84,7 +78,6 @@
     "for name in names_to_fix:\n",
     "    if len(name.split()[-1]) <= 3:\n",
     "        suffixes.append(name.split()[-1])\n",
-    "print(set(prefixes),'\\n',set(suffixes))\n",
     "prefixes_to_remove = ['Ms.', 'Mrs.', 'Miss','Mr.', 'Dr.']\n",
     "suffixes_to_remove = ['MD','DDS', 'DVM','Ph.D']\n",
     "\n",
@@ -92,36 +85,373 @@
     "\n",
     "#removing prefixes and replacing them with nothing\n",
     "for word in pre_suf_to_remove:\n",
-    "    studentCompleteDF[\"student_name\"] = studentCompleteDF[\"student_name\"].str.replace(word,\"\")\n"
+    "    studentCompleteDF[\"student_name\"] = studentCompleteDF[\"student_name\"].str.replace(word,\"\")\n",
+    "    '''\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 97,
    "id": "77bdcec6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "school_data_complete_df = pd.merge(studentCompleteDF, schoolCompleteDF, on=[\"school_name\",\"school_name\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "id": "48e7f36c",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0           Paul Bradley\n",
-      "1           Victor Smith\n",
-      "2        Kevin Rodriguez\n",
-      "3          Richard Scott\n",
-      "4             Bonnie Ray\n",
-      "              ...       \n",
-      "39165       Donna Howard\n",
-      "39166          Dawn Bell\n",
-      "39167     Rebecca Tanner\n",
-      "39168       Desiree Kidd\n",
-      "39169    Carolyn Jackson\n",
-      "Name: student_name, Length: 39170, dtype: object\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>Student ID</th>\n",
+       "      <th>student_name</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>grade</th>\n",
+       "      <th>school_name</th>\n",
+       "      <th>reading_score</th>\n",
+       "      <th>math_score</th>\n",
+       "      <th>School ID</th>\n",
+       "      <th>type</th>\n",
+       "      <th>size</th>\n",
+       "      <th>budget</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Victor Smith</td>\n",
+       "      <td>M</td>\n",
+       "      <td>12th</td>\n",
+       "      <td>Huang High School</td>\n",
+       "      <td>94</td>\n",
+       "      <td>61</td>\n",
+       "      <td>0</td>\n",
+       "      <td>District</td>\n",
+       "      <td>2917</td>\n",
+       "      <td>1910635</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Kevin Rodriguez</td>\n",
+       "      <td>M</td>\n",
+       "      <td>12th</td>\n",
+       "      <td>Huang High School</td>\n",
+       "      <td>90</td>\n",
+       "      <td>60</td>\n",
+       "      <td>0</td>\n",
+       "      <td>District</td>\n",
+       "      <td>2917</td>\n",
+       "      <td>1910635</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Bonnie Ray</td>\n",
+       "      <td>F</td>\n",
+       "      <td>9th</td>\n",
+       "      <td>Huang High School</td>\n",
+       "      <td>97</td>\n",
+       "      <td>84</td>\n",
+       "      <td>0</td>\n",
+       "      <td>District</td>\n",
+       "      <td>2917</td>\n",
+       "      <td>1910635</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Bryan Miranda</td>\n",
+       "      <td>M</td>\n",
+       "      <td>9th</td>\n",
+       "      <td>Huang High School</td>\n",
+       "      <td>94</td>\n",
+       "      <td>94</td>\n",
+       "      <td>0</td>\n",
+       "      <td>District</td>\n",
+       "      <td>2917</td>\n",
+       "      <td>1910635</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>6</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Sheena Carter</td>\n",
+       "      <td>F</td>\n",
+       "      <td>11th</td>\n",
+       "      <td>Huang High School</td>\n",
+       "      <td>82</td>\n",
+       "      <td>80</td>\n",
+       "      <td>0</td>\n",
+       "      <td>District</td>\n",
+       "      <td>2917</td>\n",
+       "      <td>1910635</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0  Student ID     student_name gender grade        school_name  \\\n",
+       "1           1           1     Victor Smith      M  12th  Huang High School   \n",
+       "2           2           2  Kevin Rodriguez      M  12th  Huang High School   \n",
+       "4           4           4       Bonnie Ray      F   9th  Huang High School   \n",
+       "5           5           5    Bryan Miranda      M   9th  Huang High School   \n",
+       "6           6           6    Sheena Carter      F  11th  Huang High School   \n",
+       "\n",
+       "   reading_score  math_score  School ID      type  size   budget  \n",
+       "1             94          61          0  District  2917  1910635  \n",
+       "2             90          60          0  District  2917  1910635  \n",
+       "4             97          84          0  District  2917  1910635  \n",
+       "5             94          94          0  District  2917  1910635  \n",
+       "6             82          80          0  District  2917  1910635  "
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(studentCompleteDF[\"student_name\"])"
+    "total_budget = school_data_complete_df[\"budget\"].unique().sum()\n",
+    "average_reading_score = school_data_complete_df[\"reading_score\"].mean()\n",
+    "average_math_score = school_data_complete_df[\"math_score\"].mean()\n",
+    "\n",
+    "passing_reading_score = 70\n",
+    "passing_math_score = 70\n",
+    "\n",
+    "passing_reading = school_data_complete_df[school_data_complete_df[\"reading_score\"] >= passing_reading_score]\n",
+    "passing_math = school_data_complete_df[school_data_complete_df[\"math_score\"] >= passing_math_score]\n",
+    "\n",
+    "passing_reading.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "id": "b89dbe97",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "passing_reading_count = passing_reading[\"student_name\"].count()\n",
+    "passing_math_count = passing_math[\"student_name\"].count()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "id": "c7d99c49",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "student_pop = float(school_data_complete_df[\"Student ID\"].count())\n",
+    "passing_math_percentage = passing_math_count / student_pop * 100.0\n",
+    "passing_reading_percentage = passing_reading_count / student_pop *100.0\n",
+    "\n",
+    "passing_math_reading = school_data_complete_df[(school_data_complete_df[\"math_score\"] >= 70) & (school_data_complete_df[\"reading_score\"]>=70)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "id": "8cc71d96",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "overall_passing_math_reading_count = passing_math_reading[\"student_name\"].count()\n",
+    "overall_passing_percentage = overall_passing_math_reading_count / student_pop * 100\n",
+    "school_count = len(school_data_complete_df.school_name.unique())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "id": "731aba2c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Total Schools</th>\n",
+       "      <th>Total Students</th>\n",
+       "      <th>Total Budget</th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>15</td>\n",
+       "      <td>39170.0</td>\n",
+       "      <td>24649428</td>\n",
+       "      <td>78.985371</td>\n",
+       "      <td>81.87784</td>\n",
+       "      <td>74.980853</td>\n",
+       "      <td>85.805463</td>\n",
+       "      <td>65.172326</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Total Schools  Total Students  Total Budget  Average Math Score  \\\n",
+       "0             15         39170.0      24649428           78.985371   \n",
+       "\n",
+       "   Average Reading Score  % Passing Math  % Passing Reading  % Overall Passing  \n",
+       "0               81.87784       74.980853          85.805463          65.172326  "
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Adding a list of values with keys to create a new DataFrame.\n",
+    "district_summary_df = pd.DataFrame(\n",
+    "          [{\"Total Schools\": school_count,\n",
+    "          \"Total Students\": student_pop,\n",
+    "          \"Total Budget\": total_budget,\n",
+    "          \"Average Math Score\": average_math_score,\n",
+    "          \"Average Reading Score\": average_reading_score,\n",
+    "          \"% Passing Math\": passing_math_percentage,\n",
+    "         \"% Passing Reading\": passing_reading_percentage,\n",
+    "        \"% Overall Passing\": overall_passing_percentage}])\n",
+    "district_summary_df\n",
+    "district_summary_df[\"Total Students\"] = district_summary_df[\"Total Students\"].map(\"{:,}\".format)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "id": "9fe2bb3a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_column_order = [\"Total Schools\", \"Total Students\", \"Total Budget\",\"Average Math Score\", \"Average Reading Score\", \"% Passing Math\", \"% Passing Reading\", \"% Overall Passing\"]\n",
+    "district_summary_df = district_summary_df[new_column_order] "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "id": "10403bf3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Total Schools</th>\n",
+       "      <th>Total Students</th>\n",
+       "      <th>Total Budget</th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>15</td>\n",
+       "      <td>39,170.0</td>\n",
+       "      <td>24649428</td>\n",
+       "      <td>78.985371</td>\n",
+       "      <td>81.87784</td>\n",
+       "      <td>74.980853</td>\n",
+       "      <td>85.805463</td>\n",
+       "      <td>65.172326</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Total Schools Total Students  Total Budget  Average Math Score  \\\n",
+       "0             15       39,170.0      24649428           78.985371   \n",
+       "\n",
+       "   Average Reading Score  % Passing Math  % Passing Reading  % Overall Passing  \n",
+       "0               81.87784       74.980853          85.805463          65.172326  "
+      ]
+     },
+     "execution_count": 112,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "district_summary_df.head()"
    ]
   }
  ],
