--- a/Rutgers_Data_Science/wiki_movies/wikimovies.ipynb
+++ b/Rutgers_Data_Science/wiki_movies/wikimovies.ipynb
@@ -32,7 +32,7 @@
    "outputs": [],
    "source": [
     "kaggleMetadata = pd.read_csv(f'{fileDir}movies_metadata.csv', low_memory=False)\n",
-    "#ratings = pd.read_csv(f'{fileDir}ratings.csv')"
+    "ratings = pd.read_csv(f'{fileDir}ratings.csv')"
    ]
   },
   {
@@ -2641,11 +2641,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
-  },
   "kernelspec": {
-   "display_name": "Python 3.10.4 64-bit",
+   "display_name": "Python 3.10.5 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -2659,9 +2656,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.5"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
