--- a/Rutgers_Data_Science/wiki_movies/ETL_clean_kaggle_data.ipynb
+++ b/Rutgers_Data_Science/wiki_movies/ETL_clean_kaggle_data.ipynb
@@ -15,7 +15,7 @@
     "from sqlalchemy import create_engine\n",
     "import psycopg2\n",
     "\n",
-    "# from config import db_password\n",
+    "from config import dbPass\n",
     "\n",
     "import time"
    ]
@@ -200,9 +200,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "PythonData",
+   "display_name": "Python 3.8.10 64-bit",
    "language": "python",
-   "name": "pythondata"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -214,7 +214,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.10"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+   }
   }
  },
  "nbformat": 4,
