--- a/Rutgers_Data_Science/wiki_movies/ETL_function_test.ipynb
+++ b/Rutgers_Data_Science/wiki_movies/ETL_function_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,14 +25,18 @@
     "    # 2. Read in the kaggle metadata and MovieLens ratings CSV files as Pandas DataFrames.\n",
     "    kaggle_metadata = pd.read_csv(kaggle_file, low_memory=False)\n",
     "    ratings = pd.read_csv(ratings_file)\n",
-    "    wiki_movies_raw = []\n",
     "    # 3. Open the read the Wikipedia data JSON file.\n",
-    "    with open(wiki_file, mode='r') as file:\n",
+    "    wiki_movies_raw = []\n",
+    "    with open(wiki_file, mode='r') as file: \n",
     "        wiki_movies_raw = json.load(file)\n",
-    "    wiki_movies_df = pd.DataFrame(wiki_movies_raw)\n",
+    "        wiki_movies_raw = [movie for movie in wiki_movies_raw if ('Director' in movie or 'Directed by' in movie)\n",
+    "            and 'imdb_link' in movie\n",
+    "            and 'No. of episodes' not in movie]\n",
+    "        #this removes entries that have episodes to remove series so we have only movies\n",
     "    \n",
     "    # 4. Read in the raw wiki movie data as a Pandas DataFrame.\n",
-    "    \n",
+    "    wiki_movies_df = pd.DataFrame(wiki_movies_raw)\n",
+    "\n",
     "    # 5. Return the three DataFrames\n",
     "    return wiki_movies_df, kaggle_metadata, ratings\n",
     "\n",
@@ -51,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,247 +67,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>url</th>\n",
-       "      <th>year</th>\n",
-       "      <th>imdb_link</th>\n",
-       "      <th>title</th>\n",
-       "      <th>Directed by</th>\n",
-       "      <th>Produced by</th>\n",
-       "      <th>Screenplay by</th>\n",
-       "      <th>Story by</th>\n",
-       "      <th>Based on</th>\n",
-       "      <th>Starring</th>\n",
-       "      <th>...</th>\n",
-       "      <th>Predecessor</th>\n",
-       "      <th>Founders</th>\n",
-       "      <th>Area served</th>\n",
-       "      <th>Products</th>\n",
-       "      <th>Services</th>\n",
-       "      <th>Russian</th>\n",
-       "      <th>Hebrew</th>\n",
-       "      <th>Revenue</th>\n",
-       "      <th>Operating income</th>\n",
-       "      <th>Polish</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>https://en.wikipedia.org/wiki/The_Adventures_o...</td>\n",
-       "      <td>1990.0</td>\n",
-       "      <td>https://www.imdb.com/title/tt0098987/</td>\n",
-       "      <td>The Adventures of Ford Fairlane</td>\n",
-       "      <td>Renny Harlin</td>\n",
-       "      <td>[Steve Perry, Joel Silver]</td>\n",
-       "      <td>[David Arnott, James Cappe, Daniel Waters]</td>\n",
-       "      <td>[David Arnott, James Cappe]</td>\n",
-       "      <td>[Characters, by Rex Weiner]</td>\n",
-       "      <td>[Andrew Dice Clay, Wayne Newton, Priscilla Pre...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>https://en.wikipedia.org/wiki/After_Dark,_My_S...</td>\n",
-       "      <td>1990.0</td>\n",
-       "      <td>https://www.imdb.com/title/tt0098994/</td>\n",
-       "      <td>After Dark, My Sweet</td>\n",
-       "      <td>James Foley</td>\n",
-       "      <td>[Ric Kidney, Robert Redlin]</td>\n",
-       "      <td>[James Foley, Robert Redlin]</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>[the novel, After Dark, My Sweet, by, Jim Thom...</td>\n",
-       "      <td>[Jason Patric, Rachel Ward, Bruce Dern, George...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>https://en.wikipedia.org/wiki/Air_America_(film)</td>\n",
-       "      <td>1990.0</td>\n",
-       "      <td>https://www.imdb.com/title/tt0099005/</td>\n",
-       "      <td>Air America</td>\n",
-       "      <td>Roger Spottiswoode</td>\n",
-       "      <td>Daniel Melnick</td>\n",
-       "      <td>[John Eskow, Richard Rush]</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>[Air America, by, Christopher Robbins]</td>\n",
-       "      <td>[Mel Gibson, Robert Downey Jr., Nancy Travis, ...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>https://en.wikipedia.org/wiki/Alice_(1990_film)</td>\n",
-       "      <td>1990.0</td>\n",
-       "      <td>https://www.imdb.com/title/tt0099012/</td>\n",
-       "      <td>Alice</td>\n",
-       "      <td>Woody Allen</td>\n",
-       "      <td>Robert Greenhut</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>[Alec Baldwin, Blythe Danner, Judy Davis, Mia ...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>https://en.wikipedia.org/wiki/Almost_an_Angel</td>\n",
-       "      <td>1990.0</td>\n",
-       "      <td>https://www.imdb.com/title/tt0099018/</td>\n",
-       "      <td>Almost an Angel</td>\n",
-       "      <td>John Cornell</td>\n",
-       "      <td>John Cornell</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>[Paul Hogan, Elias Koteas, Linda Kozlowski]</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 193 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                                                 url    year  \\\n",
-       "0  https://en.wikipedia.org/wiki/The_Adventures_o...  1990.0   \n",
-       "1  https://en.wikipedia.org/wiki/After_Dark,_My_S...  1990.0   \n",
-       "2   https://en.wikipedia.org/wiki/Air_America_(film)  1990.0   \n",
-       "3    https://en.wikipedia.org/wiki/Alice_(1990_film)  1990.0   \n",
-       "4      https://en.wikipedia.org/wiki/Almost_an_Angel  1990.0   \n",
-       "\n",
-       "                               imdb_link                            title  \\\n",
-       "0  https://www.imdb.com/title/tt0098987/  The Adventures of Ford Fairlane   \n",
-       "1  https://www.imdb.com/title/tt0098994/             After Dark, My Sweet   \n",
-       "2  https://www.imdb.com/title/tt0099005/                      Air America   \n",
-       "3  https://www.imdb.com/title/tt0099012/                            Alice   \n",
-       "4  https://www.imdb.com/title/tt0099018/                  Almost an Angel   \n",
-       "\n",
-       "          Directed by                  Produced by  \\\n",
-       "0        Renny Harlin   [Steve Perry, Joel Silver]   \n",
-       "1         James Foley  [Ric Kidney, Robert Redlin]   \n",
-       "2  Roger Spottiswoode               Daniel Melnick   \n",
-       "3         Woody Allen              Robert Greenhut   \n",
-       "4        John Cornell                 John Cornell   \n",
-       "\n",
-       "                                Screenplay by                     Story by  \\\n",
-       "0  [David Arnott, James Cappe, Daniel Waters]  [David Arnott, James Cappe]   \n",
-       "1                [James Foley, Robert Redlin]                          NaN   \n",
-       "2                  [John Eskow, Richard Rush]                          NaN   \n",
-       "3                                         NaN                          NaN   \n",
-       "4                                         NaN                          NaN   \n",
-       "\n",
-       "                                            Based on  \\\n",
-       "0                        [Characters, by Rex Weiner]   \n",
-       "1  [the novel, After Dark, My Sweet, by, Jim Thom...   \n",
-       "2             [Air America, by, Christopher Robbins]   \n",
-       "3                                                NaN   \n",
-       "4                                                NaN   \n",
-       "\n",
-       "                                            Starring  ... Predecessor  \\\n",
-       "0  [Andrew Dice Clay, Wayne Newton, Priscilla Pre...  ...         NaN   \n",
-       "1  [Jason Patric, Rachel Ward, Bruce Dern, George...  ...         NaN   \n",
-       "2  [Mel Gibson, Robert Downey Jr., Nancy Travis, ...  ...         NaN   \n",
-       "3  [Alec Baldwin, Blythe Danner, Judy Davis, Mia ...  ...         NaN   \n",
-       "4        [Paul Hogan, Elias Koteas, Linda Kozlowski]  ...         NaN   \n",
-       "\n",
-       "  Founders Area served Products Services Russian Hebrew Revenue  \\\n",
-       "0      NaN         NaN      NaN      NaN     NaN    NaN     NaN   \n",
-       "1      NaN         NaN      NaN      NaN     NaN    NaN     NaN   \n",
-       "2      NaN         NaN      NaN      NaN     NaN    NaN     NaN   \n",
-       "3      NaN         NaN      NaN      NaN     NaN    NaN     NaN   \n",
-       "4      NaN         NaN      NaN      NaN     NaN    NaN     NaN   \n",
-       "\n",
-       "  Operating income Polish  \n",
-       "0              NaN    NaN  \n",
-       "1              NaN    NaN  \n",
-       "2              NaN    NaN  \n",
-       "3              NaN    NaN  \n",
-       "4              NaN    NaN  \n",
-       "\n",
-       "[5 rows x 193 columns]"
+       "['url',\n",
+       " 'year',\n",
+       " 'imdb_link',\n",
+       " 'title',\n",
+       " 'Directed by',\n",
+       " 'Produced by',\n",
+       " 'Screenplay by',\n",
+       " 'Story by',\n",
+       " 'Based on',\n",
+       " 'Starring',\n",
+       " 'Narrated by',\n",
+       " 'Music by',\n",
+       " 'Cinematography',\n",
+       " 'Edited by',\n",
+       " 'Productioncompany ',\n",
+       " 'Distributed by',\n",
+       " 'Release date',\n",
+       " 'Running time',\n",
+       " 'Country',\n",
+       " 'Language',\n",
+       " 'Budget',\n",
+       " 'Box office',\n",
+       " 'Written by',\n",
+       " 'Genre',\n",
+       " 'Theme music composer',\n",
+       " 'Country of origin',\n",
+       " 'Original language(s)',\n",
+       " 'Producer(s)',\n",
+       " 'Editor(s)',\n",
+       " 'Production company(s)',\n",
+       " 'Original network',\n",
+       " 'Original release',\n",
+       " 'Productioncompanies ',\n",
+       " 'Executive producer(s)',\n",
+       " 'Production location(s)',\n",
+       " 'Distributor',\n",
+       " 'Picture format',\n",
+       " 'Audio format',\n",
+       " 'Voices of',\n",
+       " 'Followed by',\n",
+       " 'Composer(s)',\n",
+       " 'Created by',\n",
+       " 'Preceded by',\n",
+       " 'Adaptation by',\n",
+       " 'Suggested by',\n",
+       " 'Traditional',\n",
+       " 'Mandarin',\n",
+       " 'Released',\n",
+       " 'Recorded',\n",
+       " 'Venue',\n",
+       " 'Length',\n",
+       " 'Label',\n",
+       " 'Director',\n",
+       " 'Producer',\n",
+       " 'Also known as',\n",
+       " 'Animation by',\n",
+       " 'Color process',\n",
+       " 'Simplified',\n",
+       " 'French',\n",
+       " 'Screen story by',\n",
+       " 'Hangul',\n",
+       " 'Revised Romanization',\n",
+       " 'McCune–Reischauer',\n",
+       " 'Original title',\n",
+       " 'Japanese',\n",
+       " 'Hepburn',\n",
+       " 'Literally',\n",
+       " 'Cantonese',\n",
+       " 'Chinese',\n",
+       " 'Yiddish',\n",
+       " 'Arabic',\n",
+       " 'Romanized',\n",
+       " 'Russian',\n",
+       " 'Hebrew',\n",
+       " 'Polish']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# 9. Check the wiki_movies_df DataFrame.\n",
-    "wiki_movies_df.head()"
+    "wiki_movies_df.head()\n",
+    "wiki_movies_df.columns.tolist()"
    ]
   },
   {
@@ -652,7 +507,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.7 ('base')",
+   "display_name": "Python 3.8.10 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -666,11 +521,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.10"
   },
   "vscode": {
    "interpreter": {
-    "hash": "fca0858ce372a21c26c3847df3bc3a29e39b34ebeee721cb1ca02525deffaca6"
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
    }
   }
  },
