Finished Module 8 Challenge

--- a/Rutgers_Data_Science/wiki_movies/ETL_create_database.ipynb
+++ b/Rutgers_Data_Science/wiki_movies/ETL_create_database.ipynb
@@ -666,7 +666,38 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# A long string that contains the necessary Postgres login information\n",
+    "db_string = f\"postgres://postgres:{POSTGRES_PASSWORD}@127.0.0.1:5432/movie_data\"\n",
+    "\n",
+    "# This is all the information that SQLAlchemy needs to create a database engine.SQLAlchemy handles connections to different SQL databases and manages the conversion between data types. The way it handles all the communication and conversion is by creating a database engine.\n",
+    "# Create the database engine with the following aka create the connection:\n",
+    "engine = create_engine(db_string)\n",
+    "# Pandas Connections to Postgres to check if the import worked\n",
+    "with engine.connect() as conn, conn.begin():\n",
+    "    movie_data_from_db = pd.read_sql(\"select count(*) from movies\", con=conn)\n",
+    "    print(movie_data_from_db)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# A long string that contains the necessary Postgres login information\n",
+    "db_string = f\"postgres://postgres:{POSTGRES_PASSWORD}@127.0.0.1:5432/movie_data\"\n",
+    "\n",
+    "# This is all the information that SQLAlchemy needs to create a database engine.SQLAlchemy handles connections to different SQL databases and manages the conversion between data types. The way it handles all the communication and conversion is by creating a database engine.\n",
+    "# Create the database engine with the following aka create the connection:\n",
+    "engine = create_engine(db_string)\n",
+    "# Pandas Connections to Postgres to check if the import worked\n",
+    "with engine.connect() as conn, conn.begin():\n",
+    "    rating_data_from_db = pd.read_sql(\"select count(*) from ratings\", con=conn)\n",
+    "    print(rating_data_from_db)\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
